--- a/projects/example/src/app/app.component.html
+++ b/projects/example/src/app/app.component.html
@@ -2,12 +2,7 @@
   <div style="width: 270px;"></div>
   <div class="fl-zoom-1" ></div>
   <div style="width: 270px;padding-right: 24px;" class="fl-hor fl-right fl-center" >
-    <a style="color: white;text-decoration: none;" href="https://github.com/stypw/xl" target="__blank">
-      <span class="fl-hor fl-center">
-        <img style="width:32px;height:32px;" src="/assets/images/github-circle-white-transparent.svg" />
-        <span>&nbsp;GitHub</span>
-      </span>
-    </a>
+
   </div>
 </div>
 <div class="main fl-hor">
@@ -40,5 +35,12 @@
   <a href="https://beian.miit.gov.cn/" target="_blank" rel="noopener">
     <ng-container>黔ICP备2021009832号-1</ng-container>
   </a>
-  <span class="author">联系作者：stypw@outlook.com</span>
+
+  <a style="text-decoration: none;" href="https://github.com/stypw/xl" target="__blank">
+    <span class="fl-hor fl-center">
+      <img style="width:22px;height:22px;" src="/assets/images/github-circle-white-transparent.svg" />
+      <span>&nbsp;GitHub</span>
+    </span>
+  </a>
+  <span class="author">邮箱:stypw@outlook.com</span>
 </div>
