--- a/projects/xl/src/lib/loading/loading.component.html
+++ b/projects/xl/src/lib/loading/loading.component.html
@@ -1,39 +1,43 @@
-<div class="loading-box">
-  <div class="fl-hor fl-left fl-ver-center loading-item">
-    <div class="loading-icon"></div>
-  </div>
-  <div class="fl-hor fl-left fl-ver-center loading-item">
-    <div class="loading-icon"></div>
-  </div>
-  <div class="fl-hor fl-left fl-ver-center loading-item">
-    <div class="loading-icon"></div>
-  </div>
-  <div class="fl-hor fl-left fl-ver-center loading-item">
-    <div class="loading-icon"></div>
-  </div>
-  <div class="fl-hor fl-left fl-ver-center loading-item">
-    <div class="loading-icon"></div>
-  </div>
-  <div class="fl-hor fl-left fl-ver-center loading-item">
-    <div class="loading-icon"></div>
-  </div>
-  <div class="fl-hor fl-left fl-ver-center loading-item">
-    <div class="loading-icon"></div>
-  </div>
-  <div class="fl-hor fl-left fl-ver-center loading-item">
-    <div class="loading-icon"></div>
-  </div>
-  <div class="fl-hor fl-left fl-ver-center loading-item">
-    <div class="loading-icon"></div>
-  </div>
-  <div class="fl-hor fl-left fl-ver-center loading-item">
-    <div class="loading-icon"></div>
-  </div>
-  <div class="fl-hor fl-left fl-ver-center loading-item">
-    <div class="loading-icon"></div>
-  </div>
-  <div class="fl-hor fl-left fl-ver-center loading-item">
-    <div class="loading-icon"></div>
-  </div>
+<div class="content" >
 
+  <div class="loading-box">
+    <div class="fl-hor fl-left fl-ver-center loading-item">
+      <div class="loading-icon"></div>
+    </div>
+    <div class="fl-hor fl-left fl-ver-center loading-item">
+      <div class="loading-icon"></div>
+    </div>
+    <div class="fl-hor fl-left fl-ver-center loading-item">
+      <div class="loading-icon"></div>
+    </div>
+    <div class="fl-hor fl-left fl-ver-center loading-item">
+      <div class="loading-icon"></div>
+    </div>
+    <div class="fl-hor fl-left fl-ver-center loading-item">
+      <div class="loading-icon"></div>
+    </div>
+    <div class="fl-hor fl-left fl-ver-center loading-item">
+      <div class="loading-icon"></div>
+    </div>
+    <div class="fl-hor fl-left fl-ver-center loading-item">
+      <div class="loading-icon"></div>
+    </div>
+    <div class="fl-hor fl-left fl-ver-center loading-item">
+      <div class="loading-icon"></div>
+    </div>
+    <div class="fl-hor fl-left fl-ver-center loading-item">
+      <div class="loading-icon"></div>
+    </div>
+    <div class="fl-hor fl-left fl-ver-center loading-item">
+      <div class="loading-icon"></div>
+    </div>
+    <div class="fl-hor fl-left fl-ver-center loading-item">
+      <div class="loading-icon"></div>
+    </div>
+    <div class="fl-hor fl-left fl-ver-center loading-item">
+      <div class="loading-icon"></div>
+    </div>
+  
+  </div>
+  <div *ngIf="text">{{text}} </div>
 </div>
