--- a/projects/example/src/app/wnd/wnd.component.html
+++ b/projects/example/src/app/wnd/wnd.component.html
@@ -1,4 +1,4 @@
-<div style="width: 100%;height:100%;background-color: rgb(241, 247, 250);" xlWndlimit>
+<div style="width: 100%;height:100%;background-color: rgb(241, 247, 250);" xlWndLimit>
   <div xlWnd show style="--width:500px;--height:400px;" >
     <div header style="height: 50px;background-color: blue;">
     </div>
