--- a/projects/xl/src/lib/loading/loading.component.scss
+++ b/projects/xl/src/lib/loading/loading.component.scss
@@ -1,20 +1,14 @@
 :host{
-    position: fixed;
-    top:0rem;
-    bottom:0rem;
-    left:0rem;
-    right:0rem;
-    z-index: var(--ld-lv,99);
+    display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
     align-content: center;
     pointer-events: none;
-    display: flex;
     opacity: 0;
     transition: opacity 300ms;
-    &.absolute{
-        position: absolute;
+    &.full-screen{
+        position: fixed;
     }
     &.show{
         opacity: 1;
@@ -22,6 +16,14 @@
         &.mask{
             pointer-events: all;
         }
+    }
+
+    .content{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        align-content: center;
     }
 }
 
