--- a/projects/example/src/app/app.component.scss
+++ b/projects/example/src/app/app.component.scss
@@ -17,6 +17,7 @@
             height: 100%;
             background-color: rgb(250, 250, 250);
             padding-top: 48px;
+            overflow: auto;
             .menu-item{
                 padding-left:24px;
                 height:48px;
