--- a/projects/example/src/app/app.component.html
+++ b/projects/example/src/app/app.component.html
@@ -1,8 +1,12 @@
-<div class="header fl-hor">
-  <div style="width: 270px;"></div>
-  <div class="fl-zoom-1" ></div>
+<div class="header fl-hor" style="color: #eee;">
+  <div class="fl-hor fl-center" style="width: 270px;">
+    <h2>Xl</h2>
+    <h4>-轻量的Angular组件库</h4>
+  </div>
+  <div class="fl-zoom-1 fl-hor fl-left fl-bottom" style="padding-bottom: 15px;"  >
+  </div>
   <div style="width: 270px;padding-right: 24px;" class="fl-hor fl-right fl-center" >
-
+ 
   </div>
 </div>
 <div class="main fl-hor">
@@ -42,5 +46,4 @@
       <span>&nbsp;GitHub</span>
     </span>
   </a>
-  <span class="author">邮箱:stypw@outlook.com</span>
 </div>
