--- a/projects/example/src/app/wnd/wnd.component.html
+++ b/projects/example/src/app/wnd/wnd.component.html
@@ -1,8 +1,8 @@
 <div style="width: 100%;height:100%;background-color: rgb(241, 247, 250);" xlWndLimit>
   <div xlWnd show style="--width:500px;--height:400px;" >
-    <div header style="height: 50px;background-color: blue;">
+    <div xlWndHeader style="height: 50px;background-color: blue;">
     </div>
-    <div content style="background-color: wheat;width:100%;height:100%;">
+    <div xlWndContent style="background-color: wheat;width:100%;height:100%;">
       <div style="height:100%;width:100%;background-color: turquoise ;"></div>
     </div>
   </div>
