--- a/projects/xl/src/lib/loading/loading.component.scss
+++ b/projects/xl/src/lib/loading/loading.component.scss
@@ -7,6 +7,7 @@
     pointer-events: none;
     opacity: 0;
     transition: opacity 300ms;
+    user-select: none;
     &.full-screen{
         position: fixed;
     }
