--- a/projects/xl/src/lib/toast/toast.component.scss
+++ b/projects/xl/src/lib/toast/toast.component.scss
@@ -5,6 +5,7 @@
     justify-content: center;
     align-items: center;
     align-content: center;
+    pointer-events: none;
     @keyframes toastAnimal{
         0%{
             opacity: 0;
