--- a/projects/example/src/app/tab/tab.component.html
+++ b/projects/example/src/app/tab/tab.component.html
@@ -1,1 +1,13 @@
-<p>tab works!</p>
+<div style="width:500px;height:300px;" xlTab>
+    <div xlTabItem>tabItem1</div>
+    <div xlTabItem>tabItem2</div>
+    <div xlTabItem>tabItem3</div>
+    <div xlTabItem>tabItem4</div>
+    <div xlTabItem>tabItem5</div>
+    <div xlTabItem>tabItem6</div>
+    <div xlTabItem>tabItem7</div>
+    <div xlTabItem>tabItem1</div>
+    <div xlTabItem>tabItem1</div>
+    <div xlTabItem>tabItem1</div>
+    <div xlTabItem>tabItem1</div>
+</div>
