--- a/projects/xl/src/lib/toggle/toggle.component.html
+++ b/projects/xl/src/lib/toggle/toggle.component.html
@@ -1,8 +1,10 @@
-
+court:{{count}},left:{{left}},curr:{{curr}},right:{{right}}
 <div class="cut-box">
     <div (transitionend)="onTransitionend();" [class.toleft]="state=='LEFT'" [class.toright]="state=='RIGHT'" class="conversion-box">
         <div class="subitem" [class.show]="left==-1" style="order:0" ></div>
-        <ng-content></ng-content>
+        <ng-container *ngFor="let item of list;">
+            <ng-container *ngTemplateOutlet="item.template;context:item.context;"  ></ng-container>
+        </ng-container>
     </div>
 </div>
 
