--- a/projects/example/src/app/conversion/conversion.component.html
+++ b/projects/example/src/app/conversion/conversion.component.html
@@ -1,7 +1,9 @@
-<div [xlConversion]="conversion" style="width: 400px;height:350px;">
-    <div *ngFor="let txt of texts;let od =odd;let idx = index;" xlConversionItem [style.background-color]="od?'#ff0':'#0ff'"  >
-        txt:{{txt}},idx:{{idx}}
-    </div>
+<div [xlToggle]="toggle" style="width: 400px;height:350px;">
+    <ng-container *ngFor="let txt of texts;let od =odd;let idx = index;">
+        <div *xlToggleItem="let toggle;" [style.order]="toggle.order" style="flex-shrink: 0; flex-grow: 0;width:calc(100% / 3);height: 100%;" [style.background-color]="od?'#ff0':'#0ff'"  >
+            txt:{{txt}},idx:{{idx}}
+        </div>
+    </ng-container>
 </div>
 
 <button (click)="toPrev();">Prev</button>
