--- a/projects/example/src/app/conversion/conversion.component.html
+++ b/projects/example/src/app/conversion/conversion.component.html
@@ -1,9 +1,5 @@
-<div [xlToggle]="toggle" style="width: 400px;height:350px;">
-    <ng-container *ngFor="let txt of texts;let od =odd;let idx = index;">
-        <div *xlToggleItem="let toggle;" [style.order]="toggle.order" style="flex-shrink: 0; flex-grow: 0;width:calc(100% / 3);height: 100%;" [style.background-color]="od?'#ff0':'#0ff'"  >
-            txt:{{txt}},idx:{{idx}}
-        </div>
-    </ng-container>
+<div >
+
 </div>
 
 <button (click)="toPrev();">Prev</button>
