--- a/projects/example/src/app/process/process.component.html
+++ b/projects/example/src/app/process/process.component.html
@@ -1,1 +1,9 @@
-<p>process works!</p>
+
+<div xlProcess  style="--width:500px;--height:10px;--bk-color:rgb(108, 245, 245);--color:rgb(243, 176, 217);" value="30%" >
+  <div class="wd-full ht-full fl-ver fl-center">
+      100%
+  </div>
+  <div xlInProcess class="wd-full ht-full fl-hor fl-right fl-ver-center" >
+      <span>50%</span>
+  </div>
+</div>
