--- a/projects/xl/src/lib/process/process.component.html
+++ b/projects/xl/src/lib/process/process.component.html
@@ -1,1 +1,4 @@
-<p>process works!</p>
+<ng-content></ng-content>
+<div class="process" [style.width]="value" >
+    <ng-content select="[xlInProcess]"></ng-content>
+</div>
