一些测试，包含WND的改进，路由哈希的测试

--- a/projects/example/src/styles.scss
+++ b/projects/example/src/styles.scss
@@ -1,4 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
+@import "./scss/common.scss";
+
 *{
     box-sizing: border-box;
 }
@@ -6,7 +8,5 @@
 html,body{
     margin:0px;
     padding:0px;
-    height: 100%;
-    width: 100%;
 }
 
