--- a/projects/xl/src/lib/conversion/tab/tab.component.html
+++ b/projects/xl/src/lib/conversion/tab/tab.component.html
@@ -4,8 +4,8 @@
    </div>
    <div class="tab-content">
       <div class="cut-box">
-         <div (transitionend)="onTransitionend();" [class.toleft]="state=='LEFT'" [class.toright]="state=='RIGHT'"
-            class="conversion-box">
+         <div (transitionend)="onTransitionend();"  [class.toleft]="state=='LEFT'" [class.toright]="state=='RIGHT'"
+            class="conversion-box" [style.--duration]="duration">
             <div class="subitem" [class.show]="left==-1" style="order:0"></div>
             <ng-content></ng-content>
          </div>
