--- a/projects/example/src/app/app.component.html
+++ b/projects/example/src/app/app.component.html
@@ -5,23 +5,21 @@
   </div>
   <div class="fl-zoom-1 fl-hor fl-left fl-bottom" style="padding-bottom: 15px;"  >
   </div>
-  <div style="width: 270px;padding-right: 24px;" class="fl-hor fl-right fl-center" >
- 
-  </div>
+  
 </div>
 <div class="main fl-hor">
   <div class="left">
     <a class="menu-item fl-hor fl-left fl-ver-center" *ngFor="let m of menus;" [routerLink]="m.url"
       routerLinkActive="actived">{{m.text}}</a>
   </div>
-  <div class="content fl-ver">
+  <div class="content">
 
     <div class="fl-zoom-0 menu-title-area">
       <a class="menu-title fl-hor fl-left fl-ver-center" *ngFor="let m of menus;" [routerLink]="m.url"
         routerLinkActive="actived">{{m.text}}</a>
     </div>
-    <div class="fl-zoom-1 wd-full">
-      <div class="wd-full ht-full" style="overflow: auto;padding:10px;">
+    <div class="wd-full">
+      <div class="wd-full" style="padding:10px;">
         <router-outlet></router-outlet>
       </div>
     </div>
