--- a/projects/example/src/app/app.component.scss
+++ b/projects/example/src/app/app.component.scss
@@ -1,20 +1,20 @@
 
 :host{
-    width:100%;
-    height: 100%;
     $headerHeight:64px;
     $footerHeight:36px;
     $leftWidth:270px;
     .header{
         height:$headerHeight;
-        background-color: #1976d2;;
+        background-color: #1976d2;
+        position: sticky;
+        top:0px;
     }
     .main{
-        height: calc(100% - #{$headerHeight} - #{$footerHeight});
-        overflow:hidden;
         .left{
+            position: sticky;
+            top: $headerHeight;
             width:$leftWidth;
-            height: 100%;
+            height: calc(100vh - #{$headerHeight} - #{$footerHeight});
             background-color: rgb(250, 250, 250);
             padding-top: 48px;
             overflow: auto;
@@ -35,6 +35,8 @@
             width:calc(100% - #{$leftWidth});
             height: 100%;
             .menu-title-area{
+                position: sticky;
+                top: $headerHeight;
                 height: 48px;
                 box-shadow: 1px 1px 6px 1px rgba(0,0,0,0.1);
             }
@@ -54,6 +56,8 @@
         }
     }
     .footer{
+        position: sticky;
+        bottom: 0px;
         height: $footerHeight;
         background-color: #333;
         color:#ccc;
