--- a/projects/xl/src/lib/wnd/wnd-limit/wnd-limit.compoent.scss
+++ b/projects/xl/src/lib/wnd/wnd-limit/wnd-limit.compoent.scss
@@ -1,4 +1,14 @@
 :host{
-    position: relative !important ;
-    display: block;
+    .wnd-limit{
+        width: 100%;
+        height: 100%;
+        position: relative ;
+    }
+    &.full-screen{
+        position: fixed;
+        left:0px;
+        top:0px;
+        right:0px;
+        bottom: 0px;
+    }
 }
