--- a/projects/example/src/app/app.component.scss
+++ b/projects/example/src/app/app.component.scss
@@ -38,6 +38,7 @@
                 top: $headerHeight;
                 height: 48px;
                 box-shadow: 1px 1px 6px 1px rgba(0,0,0,0.1);
+                background-color: white;
             }
             .menu-title{
                 display: none;
