--- a/projects/xl/src/lib/anchor/anchor-group/anchor-group.component.html
+++ b/projects/xl/src/lib/anchor/anchor-group/anchor-group.component.html
@@ -1,2 +1,2 @@
 <ng-content></ng-content>
-<div class="line" [style.top]="linePos" ></div>
+<!-- <div class="line" [style.top]="linePos" ></div> -->
