--- a/projects/example/src/app/page/page.component.html
+++ b/projects/example/src/app/page/page.component.html
@@ -1,1 +1,3 @@
-<p>page works!</p>
+<div xlPagger [pageCount]="count" [(pageIndex)]="index"></div>
+<input [(ngModel)]="count" />
+<input [(ngModel)]="index" />
