--- a/projects/example/src/app/tab/tab.component.html
+++ b/projects/example/src/app/tab/tab.component.html
@@ -1,3 +1,3 @@
 <div style="width:1000px;height:600px;" xlTab>
-    <div *ngFor="let txt of tabTexts;let od =odd;" [header]="txt" [style.background-color]="od?'red':'green'" xlTabItem>{{txt}}</div>
+    <div *ngFor="let txt of tabTexts;let od =odd;" [xlTabItemHeader]="txt" [style.background-color]="od?'red':'green'" xlTabItem>{{txt}}</div>
 </div>
