--- a/projects/xl/src/lib/conversion/carousel/carousel.component.html
+++ b/projects/xl/src/lib/conversion/carousel/carousel.component.html
@@ -8,7 +8,7 @@
    <div class="carousel-content">
       <div class="cut-box">
          <div (transitionend)="onTransitionend();" [class.toleft]="state=='LEFT'" [class.toright]="state=='RIGHT'"
-            class="conversion-box">
+            class="conversion-box" [style.--duration]="xlConversionDuration">
             <div class="subitem" [class.show]="left==-1" style="order:0"></div>
             <ng-content></ng-content>
          </div>
