--- a/projects/xl/src/lib/conversion/tab/tab.component.scss
+++ b/projects/xl/src/lib/conversion/tab/tab.component.scss
@@ -10,13 +10,23 @@
             display: flex;
             flex-direction: row;
             row-gap: 10px;
+            column-gap: 1px;
             .header-item{
-                padding:10px;
-                border:1px solid red;
+                padding:3px 10px;
+                height: 30px;
+                line-height: 30px;
+                border-top-left-radius: 5px;
+                border-top-right-radius: 5px;
+                border:1px solid #ccc;
+                display: flex;
+                flex-direction: row;
+                justify-content: center;
+                align-items: center;
+                align-content: center;
                 cursor: pointer;
 
                 &.actived{
-                    background-color: red;
+                    background-color: #ccc;
                     color:white;
                 }
             }
