--- a/projects/xl/src/lib/pagger/pagger.component.scss
+++ b/projects/xl/src/lib/pagger/pagger.component.scss
@@ -17,9 +17,30 @@
         border-bottom: $border;
         border-left: $border;
         user-select: none;
-        cursor: default;
-        &:hover{
-            box-shadow: 0px 0px 6px 1px #ccc;
+        cursor: pointer;
+        &:not(.disabled):hover{
+            color:white;
+            position: relative;
+            z-index: 1;
+            &::before{
+                @keyframes paggerHover{
+                    from{
+                        clip-path: circle(10%);
+                    }
+                    to{
+                        clip-path: circle(100%);
+                    }
+                }
+                content: '';
+                position: absolute;
+                left:0px;
+                top:0px;
+                right:0px;
+                bottom: 0px;
+                background-color: rgba(0, 183, 255, 0.623);
+                animation: paggerHover 500ms ;
+                z-index: -1;
+            }
         }
         &:first-child{
             border-top-left-radius: $borderRadius;
@@ -39,6 +60,9 @@
         &.checked{
             background-color: rgb(0, 204, 255);
             color:white;
+            pointer-events: none;
+        }
+        &.dot{
             pointer-events: none;
         }
         &.hide{
