--- a/projects/xl/src/lib/colorpicker/colorpicker.component.html
+++ b/projects/xl/src/lib/colorpicker/colorpicker.component.html
@@ -1,1 +1,7 @@
-<p>colorpicker works!</p>
+<div draggable="false" (mousedown)="mouseDownInPicker($event);" class="color-panel" [xlBinding]="panel" (click)="panelClick($event);" >
+    <div draggable="false" [style.top]="pickerTop" [style.left]="pickerLeft" class="color-picker" >
+        <div class="color-value"></div>
+    </div>
+</div>
+<div style="width: 255px;" [(value)]="colorBValue" xlSlider max=255 min=0 step=0 ></div>
+<div style="width: 60px;height: 30px;" [style.background-color]="hexValue" ></div>
