--- a/projects/example/src/app/svg/svg.component.html
+++ b/projects/example/src/app/svg/svg.component.html
@@ -1,3 +1,4 @@
-
-<div xlSvg="close" style="height: 30px;width:30px;--color:blue;" ></div>
-<div xlSvg="tree" style="height: 30px;width:30px;--color:green;" ></div>
+<div  *ngFor="let svg of svgs;" class="fl-ver fl-center svg-item">
+    <div [xlSvg]="svg" style="height: 30px;width:30px;--color:blue;" ></div>
+    <div>{{svg}}</div>
+</div>
