--- a/projects/xl/src/lib/datepicker/date-selector/date-selector.component.html
+++ b/projects/xl/src/lib/datepicker/date-selector/date-selector.component.html
@@ -1,4 +1,4 @@
-<div xlSelectorPanel class="date-selector">
+<div xlSelectorPanel>
     <div class="date-header" xlSelectorPanelHeader>
         <div class="fl-zoom-0" (click)="toPrevYear();">
             <div class="prev arrow" xlSvg="next" ></div>
