--- a/projects/example/src/assets/css/flex.css
+++ b/projects/example/src/assets/css/flex.css
@@ -173,24 +173,24 @@
 .column-gap-19,.col-gap-19{column-gap:19px;}
 .column-gap-20,.col-gap-20{column-gap:20px;}
 
-.gap-0 {row-gap: 0px;}
-.gap-1 {row-gap: 1px;}
-.gap-2 {row-gap: 2px;}
-.gap-3 {row-gap: 3px;}
-.gap-4 {row-gap: 4px;}
-.gap-5 {row-gap: 5px;}
-.gap-6 {row-gap: 6px;}
-.gap-7 {row-gap: 7px;}
-.gap-8 {row-gap: 8px;}
-.gap-9 {row-gap: 9px;}
-.gap-10{row-gap:10px;}
-.gap-11{row-gap:11px;}
-.gap-12{row-gap:12px;}
-.gap-13{row-gap:13px;}
-.gap-14{row-gap:14px;}
-.gap-15{row-gap:15px;}
-.gap-16{row-gap:16px;}
-.gap-17{row-gap:17px;}
-.gap-18{row-gap:18px;}
-.gap-19{row-gap:19px;}
-.gap-20{row-gap:20px;}
+.row-gap-0 {row-gap: 0px;}
+.row-gap-1 {row-gap: 1px;}
+.row-gap-2 {row-gap: 2px;}
+.row-gap-3 {row-gap: 3px;}
+.row-gap-4 {row-gap: 4px;}
+.row-gap-5 {row-gap: 5px;}
+.row-gap-6 {row-gap: 6px;}
+.row-gap-7 {row-gap: 7px;}
+.row-gap-8 {row-gap: 8px;}
+.row-gap-9 {row-gap: 9px;}
+.row-gap-10{row-gap:10px;}
+.row-gap-11{row-gap:11px;}
+.row-gap-12{row-gap:12px;}
+.row-gap-13{row-gap:13px;}
+.row-gap-14{row-gap:14px;}
+.row-gap-15{row-gap:15px;}
+.row-gap-16{row-gap:16px;}
+.row-gap-17{row-gap:17px;}
+.row-gap-18{row-gap:18px;}
+.row-gap-19{row-gap:19px;}
+.row-gap-20{row-gap:20px;}
