--- a/projects/example/src/styles.scss
+++ b/projects/example/src/styles.scss
@@ -1,12 +1,46 @@
 /* You can add global styles to this file, and also import other style files */
 @import "./scss/common.scss";
-
+@import "./scss/anchor.scss";
+@import "./scss/theme.scss";
 *{
     box-sizing: border-box;
 }
+:root{
+    font-size: 20px;
+}
+
+@media screen and (min-width: 1366px){
+    :root{
+        font-size: 18px;
+    }
+}
+
+@media screen and (min-width: 1024px)  and (max-width: 1366px) {
+    :root{
+        font-size:16px;
+    }
+}
+
+@media screen and (min-width: 764px)  and (max-width: 1024px) {
+    :root{
+        font-size: 14px;
+    }
+}
+
+
+@media screen and (max-width: 764px) {
+    :root{
+        font-size:12px;
+    }
+}
+
+
 
 html,body{
     margin:0px;
     padding:0px;
+}
+body{
+    font-size: 0.6rem;
 }
 
