--- a/projects/xl/src/lib/table/table.component.html
+++ b/projects/xl/src/lib/table/table.component.html
@@ -1,1 +1,27 @@
-<p>table works!</p>
+<ng-template #defaultHeader let-header let-idx="index" let-od="odd" let-ev="even" let-fst="first" let-lst="last">
+    <div class="header-item" [class.first]="fst">{{header.text}}</div>
+</ng-template>
+<ng-template #defaultCell let-cell let-h="header" let-ridx="rindex" let-rod="rodd" let-rev="reven" let-rfst="rfirst"
+    let-rlst="rlast" let-cidx="cindex" let-cod="codd" let-cev="ceven" let-cfst="cfirst" let-clst="clast">
+    <div class="cell" [style.justify-content]="h.align || 'center'" [class.first-row]="rfst" [class.first]="cfst">{{cell[h.key]}}</div>
+</ng-template>
+<div class="table" [style.grid-template-columns]="templateColumns" *ngIf="headers && headers.length">
+
+    <ng-container *ngFor="let h of headers;let idx=index;let od = odd;let ev = even;let fst = first;let lst = last;">
+        <ng-container
+            *ngTemplateOutlet="headerTemplate || defaultHeader; context: {$implicit:h,index:idx,odd:od,even:ev,first:fst,last:lst};">
+        </ng-container>
+    </ng-container>
+    <ng-container *ngIf="rows && rows.length">
+
+        <ng-container
+            *ngFor="let r of rows;let rindex=index;let rodd = odd;let reven = even;let rfirst = first;let rlast = last;">
+            <ng-container
+                *ngFor="let c of headers;let cindex=index;let codd = odd;let ceven = even;let cfirst = first;let clast = last;">
+                <ng-container
+                    *ngTemplateOutlet="cellTemplate || defaultCell; context: {$implicit:r,header:c,rindex,rodd,reven,rfirst,rlast,cindex,codd,ceven,cfirst,clast}">
+                </ng-container>
+            </ng-container>
+        </ng-container>
+    </ng-container>
+</div>
