--- a/projects/xl/src/lib/menu-switch/menu-switch.component.html
+++ b/projects/xl/src/lib/menu-switch/menu-switch.component.html
@@ -1,6 +1,5 @@
 <svg style="width:100%;height:100%;" viewBox="0 0 1000 1000" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-    <rect  x="0" y="450" class="xl-menu-switch-bar-1" [style.animation-duration]="duration" [class.xl-menu-switch-open]="_open"  [class.xl-menu-switch-close]="!_open" width="1000" height="100" rx="50" ry="50"/>
-    <rect  x="0" y="450" class="xl-menu-switch-bar-2" [style.animation-duration]="duration" [class.xl-menu-switch-open]="_open"  [class.xl-menu-switch-close]="!_open" width="1000" height="100" rx="50" ry="50"/>
-    <rect  x="0" y="450" class="xl-menu-switch-bar-3" [style.animation-duration]="duration" [class.xl-menu-switch-open]="_open"  [class.xl-menu-switch-close]="!_open" width="1000" height="100" rx="50" ry="50"/>
+    <rect  x="0" y="450" class="xl-menu-switch-bar-1" [class.xl-menu-switch-open]="_open===true"  [class.xl-menu-switch-close]="_open===false" width="1000" height="100" rx="50" ry="50"/>
+    <rect  x="0" y="450" class="xl-menu-switch-bar-2" [class.xl-menu-switch-open]="_open===true"  [class.xl-menu-switch-close]="_open===false" width="1000" height="100" rx="50" ry="50"/>
+    <rect  x="0" y="450" class="xl-menu-switch-bar-3" [class.xl-menu-switch-open]="_open===true"  [class.xl-menu-switch-close]="_open===false" width="1000" height="100" rx="50" ry="50"/>
 </svg>
-
