--- a/projects/example/src/app/components/anchor/anchor.component.html
+++ b/projects/example/src/app/components/anchor/anchor.component.html
@@ -30,3 +30,4 @@
         <div class="anchor-item" xlTargetActived="actived" xlLinkActived="actived" xlHash="a15">示例</div>
     </div>
 </div>
+<div style="height: 50vh;"></div>
