--- a/projects/example/src/app/app.component.scss
+++ b/projects/example/src/app/app.component.scss
@@ -1,69 +1,52 @@
 
-$headerHeight:4rem;
+$headerHeight:3rem;
 $footerHeight:2rem;
-$leftWidth:200px;
+$leftWidth:4rem;
 :host{
-    min-height: 100%;
-    display: grid;
-    grid-template-columns: auto 1fr;
-    grid-template-rows: 64px 1fr 40px;
-    grid-template-areas: 
-    "left header"
-    "left content"
+   display: grid;
+   grid-template-rows: $headerHeight 1fr $footerHeight;
+   grid-template-columns: $leftWidth 1fr;
+   grid-template-areas: 
+    "header header"
+    "left main"
     "left footer"
-    ;
+   ;
 }
 
 .header{
+    grid-area: header;
     position: sticky;
     top:0px;
-    grid-area: header;
     background-color: #1976d2;
     box-shadow: 1px 1px 6px 1px #1976d260;
+    z-index: 99;
+}
+
+.main{
+    padding:1rem;
+   grid-area: main;
+   min-height: calc(100vh - #{$headerHeight} - #{$footerHeight});
 }
 
 .left{
     grid-area: left;
+    padding-top: 1rem;
+
     background-color: rgb(250, 250, 250);
     box-shadow: 1px 1px 6px 1px rgba(0,0,0,0.1);
-    width:200px;
     transition: width 300ms;
-    overflow: hidden;
-    &.close{
-        width:0px;
-    }
+   
+    overflow: visible;
 }
-
-
-.menu-item{
-    width:200px;
-    padding-left:1em;
-    height:2rem;
-    color:rgba(0,0,0,0.65);
-    text-decoration: none;
-    font-size: 0.8rem;
-    &.actived{
-       color:rgb(63, 81, 181);
-       background-color: rgba(63, 81, 181, 0.15); 
-    } 
-}
-
-
-.content{
-    grid-area: content;
-    height: 100vh;
-}
-
 
 .footer{
     grid-area: footer;
-    background-color: #333;
-    color:#ccc;
+    background-color: rgba(51, 51, 51, 0.055);
     padding-left:10%;
     padding-right: 10%;
     a{
         text-decoration: none;
-        color:#ccc;
+        color:rgb(47, 189, 233);
         &:hover{
             text-decoration: underline;
         }
@@ -71,3 +54,117 @@ $leftWidth:200px;
 }
 
 
+.menu-item{
+    width:100%;
+    height: 3rem;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+
+    border-top: 1px solid rgba(63, 81, 181, 0.048); 
+    position: relative;
+    overflow: visible;
+    .menu-text-area{
+        position: absolute;
+        top:0px;
+        bottom:0px;
+        width:6rem;
+        left:100%;
+        background-color: transparent;
+        display: flex;
+        flex-direction: row;
+        justify-content: flex-start;
+        align-items: center;
+        align-content: center;
+        opacity: 0;
+        pointer-events: none;
+        .menu-text-arrow{
+            box-sizing: border-box;
+            width:0px;
+            height: 0px;
+            border-left: 0.6rem solid transparent;
+            border-top: 0.4rem solid transparent;
+            border-right: 0.6rem solid rgba(47, 190, 233, 1);
+            border-bottom: 0.4rem solid transparent;
+        }
+
+        .menu-text{
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            align-items: center;
+            align-content: center;
+            height: 2rem;
+            width:4rem;
+            background-color: rgba(47, 189, 233,1);
+            color:white;
+            border-radius: 2px;
+        }
+    }
+
+    
+
+    &:hover{
+        background-color: rgba(63, 81, 181, 0.048);
+        .menu-text-area{
+            pointer-events: all;
+            opacity: 1;
+        }
+    }
+    .menu-icon{
+        width: 1.3rem;
+        height: 1.3rem;
+    }
+
+    &.actived{
+     
+       position: relative;
+       --color:white;
+       background-color: rgb(0, 174, 255);
+    } 
+}
+
+
+.menu-switch{
+    width: 1.2rem;
+    height:1.2rem;
+    --color:white;
+    --duration:300ms;
+    cursor: pointer;
+    display: none;
+}
+
+@media screen and (max-width: 764px) {
+    :host{
+        display: grid;
+        grid-template-rows: $headerHeight 1fr $footerHeight;
+        grid-template-columns: 1fr;
+        grid-template-areas: 
+        "header"
+        "main"
+        "footer"
+        ;
+    }
+    .menu-switch{
+        display: block;
+    }
+    .left{
+        position: fixed;
+        grid-area: none;
+        top:$headerHeight;
+        right:0px;
+        left:0px;
+        bottom:0px;
+        
+        pointer-events: none;
+        transform: scaleX(0);
+        transform-origin: top left;
+        transition:  transform 300ms;
+        &.open{
+            pointer-events: none;
+            transform: scale(1);
+        }
+    }
+}
